Fixed spacing

--- a/calculator/css/styles.css
+++ b/calculator/css/styles.css
@@ -44,7 +44,8 @@ body {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  padding: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1.5rem;
   grid-row: 2;
   grid-column: 1 / 3;
 }
@@ -166,5 +167,4 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .results {
-  padding: 1rem;
 }
